# ms-basket

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yml
kubernetes/base/: kustomization.yml
kubernetes/base/api/: configmap.yml  deployment.yml  ingress.yml  service.yml
kubernetes/base/redis/: configmap.yml  deployment.yml  service.yml
kubernetes/overlays/dev/api/: secret.yml
src/: main.rs
