[package]
name = "ms-basket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
redis = "0.21.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.0", features = ["json"] }

serde_json = "1.0"
time = "0.3.22"
actix-cors = "0.6.4"
